Update Hangman.css and popup.js to fix popup flicker

--- a/src/Hangman.css
+++ b/src/Hangman.css
@@ -72,6 +72,10 @@
   box-shadow: 0 15px 10px 3px rgba(0, 0, 0, 0.1);
   padding: 20px;
   text-align: center;
+  opacity: 0;
+  visibility: hidden;
+  transition: opacity 0.3s, visibility 0s 0.3s;
+
 }
 
 .popup button {
@@ -92,6 +96,10 @@
   outline: 0;
 }
 
+.popup.show {
+  opacity: 1; /* Fully visible */
+  visibility: visible; /* Make the notification visible */
+}
 .notification-container {
   background-color: rgba(0, 0, 0, 0.3);
   border-radius: 10px 10px 10px 10px;
